fix: fix buttons wrap issue

--- a/homeworks/lizaveta-kryvanosava/19-react-hooks/src/app/global.scss
+++ b/homeworks/lizaveta-kryvanosava/19-react-hooks/src/app/global.scss
@@ -2,9 +2,12 @@
 @use '@/styles/variables';
 @use '@/styles/font.scss';
 
+* {
+  font-family: Hind;
+}
+
 html {
   height: 100%;
-  font-family: Hind;
 }
 
 body {
