--- a/homeworks/lizaveta-kryvanosava/19-react-hooks/src/app/page.module.scss
+++ b/homeworks/lizaveta-kryvanosava/19-react-hooks/src/app/page.module.scss
@@ -12,7 +12,7 @@
     gap: 2rem;
     width: 40%;
 
-    @media (max-width: 75rem) {
+    @media (max-width: 80rem) {
       width: 60%;
     }
     @media (max-width: 40rem) {
