--- a/homeworks/lizaveta-kryvanosava/19-react-hooks/src/components/addToDoForm.module.scss
+++ b/homeworks/lizaveta-kryvanosava/19-react-hooks/src/components/addToDoForm.module.scss
@@ -6,7 +6,7 @@
   height: 3rem;
   overflow: hidden;
 
-  @media (max-width: 75rem) {
+  @media (max-width: 80rem) {
     width: 60%;
   }
   @media (max-width: 40rem) {
